# mirza

./: .env  .gitignore  BUGFIX_USER_NOT_FOUND.md  DEPLOYMENT.md  LICENSE  README.md  README2.md  WARP.md  WEBPANEL_COMPLETE_GUIDE.md  admin.php  alireza_single.php  apiprice.php  botapi.php  config.new.php  config.php  cookie.txt  error_log  fix-setup-wizard.sh  fix_mysql_user.sh  function.php  function2.php  index(2).php  index.html  index.php  install.php  install.sh  keyboard.php  log.txt  mig.php  mirza_pro.git  openapi.json  panels.php  partner-product-analysis.md  partner-product-changes-summary.md  partner-product-implementation-checklist.md  partner-product-sql-simple.sql  partner-product-sql.sql  pasarguard.php  request.php  setup_check.php  (+6 more)
api/: error_log  invoice.php  keyboard.php  log.txt  miniapp.php  panels.php  product.php  users.php
app/: index.php
cronbot/: NoticationsService.php  backupbot.php  configtest.php  croncard.php  error_log  expireagent.php  gift.php  iranpay1.php  log.txt  lottery.php  on_hold.php  payment_expire.php  plisio.php  sendmessage.php  statusday.php  uptime_node.php  uptime_panel.php
docs/: api-contracts.md  architecture.md  component-inventory.md  data-models.md  deployment-guide.md  development-guide.md  git-guide-fa.md  index.md  integration-architecture.md  migration-roadmap.md  (+4 more)
python/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
python/app/: main.py
python/app/api/: health.py
python/app/core/: config.py
python/app/db/: session.py
python/bot/: main.py
python/tests/: test_health.py
(+112 files in other folders)
