[tool.poetry]
name = "moonvpn-python"
version = "0.1.0"
description = "Modern Python scaffold for Mirza migration (FastAPI + Aiogram)"
authors = ["MMad <dev@example.com>"]
readme = "README.md"
packages = [{ include = "app" }, { include = "bot" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {version = "^0.30.0", extras = ["standard"]}
pydantic = "^2.9.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
psycopg = {version = "^3.2.1", extras = ["binary"]}
redis = "^5.0.8"
aiogram = "^3.7.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true


